import React from 'react'
import {shallow} from 'enzyme'
import { GifExpertApp } from '../GifExpertApp'

describe('Pruebas en <GifExpertApp />', () => {
    test('debe de mostrarse correctamente', () => {
        const wrapper = shallow( <GifExpertApp />) 
        expect(wrapper ).toMatchSnapshot()
    })
    test('debe de mostraruna lista de categorias', () => {
        const categories = ['Dragon Ball', 'Pokemon']
        const wrapper = shallow(<GifExpertApp defaultCategories={categories} />)

        expect( wrapper).toMatchSnapshot()
        expect( wrapper.find('GifGrid').length ).toBe( categories.length )

    })


})
